Updated portfolio content and layout

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <a href="assets/resume.pdf" download target="_blank" class="btn">Download CV <i class="uil uil-file-alt"></i></a>
+            <a href="assets/cv.pdf" download target="_blank" class="btn">Download CV <i class="uil uil-file-alt"></i></a>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="featured-text-btn">
                     <a href="#contact" class="btn blue-btn">Hire Me</a>
-                    <a href="assets/resume.pdf" class="btn" download target="_blank">Download CV <i class="uil uil-file-alt"></i></a>
+                    <a href="assets/cv.pdf" class="btn" download target="_blank">Download CV <i class="uil uil-file-alt"></i></a>
                 </div>
                 <div class="social_icons">
                     <div class="icon"><i class="uil uil-instagram"></i></div>
@@ -126,14 +126,14 @@
                     make my clients satisfied by geting their business online the right way, giving clients 
                     industrial-standard design and all the functionality they need to opperate smoothly online.
                     Get in touch today with the details of your project or projects let's get started
-                    Check  out my resume below!
+                    Check  out my cv below!
                 </p>
                 <p class="about-texts about-text" >
                     Building projects my clients love have always been my passion. Being in
                     we development industry for over 3 years and serving more than 40 happy 
                     clients worldwide, i'm always moltivated to do more!
                 </p>
-                <a href="assets/resume.pdf" class="btn but" download target="_blank"> <i class="uil uil-download-alt"></i> Download CV</a>
+                <a href="assets/cv.pdf" class="btn but" download target="_blank"> <i class="uil uil-download-alt"></i> Download CV</a>
             </div>
         </div>
        </section>
@@ -231,7 +231,7 @@
             <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email:mohammednurdine6@gmail.com</p>
+                    <p class="email"><i class="uil uil-envelope"></i> Email:nurdined3@gmail.com</p>
                     <p><i class="uil uil-phone"></i> Tel:+237 677 034 736</p>
                     <p><a href="https://wa.me/+237677034736/?text=Hello+NURDIN.+i+need+your+services." class="link"><i class="uil uil-whatsapp"></i> Message me on whatsapp</a></p>
                 </div>
@@ -277,8 +277,10 @@
         
             <div class="footer-column">
                 <div class="footer-logo">
-                <img src="https://via.placeholder.com/60x60?text=LOGO" alt="Company Logo">
-            </div>
+                    
+                 <p class="nav-name">Moham<span>.</span></p>
+                 <span></span>
+                </div>
                 <h3>Contact</h3>
                 <ul>
                     <li>Address: Mile 4 Nkwen, Bamenda Cameroon</li>
@@ -306,15 +308,15 @@
                     <a href="#"><img src="assets/images/defense1.jpg" alt="App Store"></a>
                     <a href="#"><img src="assets/images/defense2.jpg" alt="Google Play"></a>
                 </div>
-                <div class="payment-icons">
+                <!-- <div class="payment-icons">
                     <img src="assets/images/defense21.jpg" alt="Visa">
                     <img src="assets/images/defense3.jpg" alt="MasterCard">
                     <img src="assets/images/defense5.jpg" alt="MTN MoMo">
                     <img src="assets/images/defense4.jpg" alt="Orange Money">
-                </div>
+                </div> -->
             </div>
 
-            <div class="footer-column">
+            <!-- <div class="footer-column">
                 <h3>My gallery</h3>
                 <p>Tech, Educational and Entrprenueral Adventures & Memories</p>
                 <div class="app-badges">
@@ -327,7 +329,7 @@
                     <img src="assets/images/defense5.jpg" alt="MTN MoMo">
                     <img src="assets/images/defense4.jpg" alt="Orange Money">
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="footer-bottom">
