Updated portfolio content by changing about image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
        <section class="about" id="about">
         <div class="container about_container">
             <div class="about_image">
-                <img src="assets/images/about-images.png" alt="about me image">
+                <img src="assets/images/defense21.jpg" alt="about me image">
             </div>
             <div class="about_details">
                 <div class="top-header"><h1>About Me</h1></div>
